<resources>

    <!-- APP -->
    <string name="app_name">Shopping Payments</string>

    <!-- LOGIN -->
    <string name="login_activity__login_title">Login</string>
    <string name="login_activity__login">Login</string>
    <string name="login_activity__email">E-mail</string>
    <string name="login_activity__password">Password</string>

    <!-- NICKNAME -->
    <string name="nickname_activity__nickname_title">Nickname</string>
    <string name="nickname_activity__nickname">@string/nickname_activity__nickname_title</string>
    <string name="nickname_activity__set_nickname">Set nickname</string>

    <!-- PAYMENTS -->
    <string name="payments_activity__payment_title">Payments</string>
    <string name="payments_activity__total_sum">Total sum:</string>
    <string name="payments_activity__add_dialog__update">Update</string>
    <string name="payments_activity__add_dialog__cancel">Cancel</string>
    <string name="payments_activity__add_dialog__delete">Delete</string>
    <string name="payments_activity__not_owner">You are not owner!</string>

    <!-- MENU PAYMENTS -->
    <string name="menu_payments__create_group">Create group</string>
    <string name="menu_payments__show_groups">Show groups</string>

    <!-- ADD PAYMENT -->
    <string name="add_payment_activity__add_payment_title">Add payment</string>
    <string name="add_payment_activity__shop">Shop</string>
    <string name="add_payment_activity__price">Price</string>
    <string name="add_payment_activity__addPayment">Add payment</string>

    <!-- CREATE GROUP -->
    <string name="create_group_activity__create_group_title">Create group</string>
    <string name="create_group_activity__create_new_group">Create new group</string>
    <string name="create_group_activity__group_name">Group name</string>

    <!-- SHOW GROUPS -->
    <string name="show_groups_activity__show_groups_title">Show groups</string>

    <!-- GROUP DETAIL -->
    <string name="group_detail_activity__group_detail_title">Group detail</string>

    <!-- INVITE FRIENDS -->
    <string name="invite_friends_activity__invite_friends_title">Invite Friends</string>
    <string name="invite_friends_activity__invitation_title">Shopping Payments</string>
    <string name="invite_friends_activity__invitation_message">Invite to group</string>
    <string name="invite_friends_activity__invitation_deep_link">Deep link</string>
    <string name="invite_friends_activity__invitation_custom_image">custom image</string>
    <string name="invite_friends_activity__invitation_cta">cta</string>
    <string name="invite_friends_activity__invite_friend">Invite friend</string>
    <string name="invite_friends_activity__friends_email">Friend\'s email</string>

</resources>
