<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="katka.shoppingpayments.screens.add_payment.AddPaymentActivity">


    <EditText
        android:id="@+id/add_payment_activity__price_editText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/add_payment_activity__price" />

    <EditText
        android:id="@+id/add_payment_activity__shop_editText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:inputType="text"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/add_payment_activity__shop" />

    <Button
        android:id="@+id/add_payment_activity__add_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/add_payment_activity__addPayment" />

</LinearLayout>
